--- a/css/style.css
+++ b/css/style.css
@@ -555,6 +555,9 @@ header{
     font-size: 14px;
     
 }
+.caixas-publico p{
+    max-width: 80%;
+}
 .caixa-servicos p, .caixa-publico p{
     padding: 5px;
     max-width: 95%;
