--- a/css/style.css
+++ b/css/style.css
@@ -787,5 +787,5 @@ opacity: 0;
 transform: rotate(45deg) translate(-5px, -7px);
 }
 .nav-list.active{
-/*transform: translatex(-160px);*/
+transform: translatex(-130%);
 }
