--- a/css/style.css
+++ b/css/style.css
@@ -60,8 +60,6 @@ background-color: white;
 }
 .nav-list{
 display: inline;
-position: absolute;
-left: 485px;
 height: 80vh;
 border-radius: 830px 0 0 0;
 
@@ -475,7 +473,9 @@ header{
     
 }
 .nav-list{
-    display: none;
+    opacity:0 ;
+    pointer-events: none;
+    display: block;
     position: absolute;
     top: 10px;
     right:0 ;
@@ -483,8 +483,8 @@ header{
     height: 80vh;
     width: 180px;
     border-radius: 830px 0 0 0;
-    transform: translateX(100%);
-    transition: transform 0.3s ease-in-out;
+    transform: translateX(0%);
+    transition: all transform 0.3s ease-in-out;
     z-index: 999;
 }
 .nav-list ul{
@@ -798,5 +798,7 @@ opacity: 0;
 transform: rotate(45deg) translate(-5px, -7px);
 }
 .nav-list.active{
-transform: translatex(-126%);
+    opacity: 1;
+    pointer-events: auto;
+    transform: translateX(0%);
 }
