--- a/css/style.css
+++ b/css/style.css
@@ -132,7 +132,6 @@ padding: 5px;
 background-color: white; 
 }
 .caixa-servicos, .caixa-publico{
-
 margin: 0 auto;
 font-size: 13px;
 margin-bottom: 15px;
@@ -193,7 +192,6 @@ align-items: stretch;
 }
 .caixa-publico{
 display: inline-block;
-height: 30%;
 width: 33%;
 margin: 15px;
 max-height: 200px;
@@ -441,7 +439,6 @@ header{
     background-image: url('../img/');
     background-size: cover;
     background-position: center;
-    background-color: black;
     border-radius: 0 0 150PX 0;
     display: flex;
     
@@ -624,7 +621,8 @@ main{
     box-sizing: border-box;
 }
 
-.caixa-publico{        
+.caixa-publico{  
+    display: inline-block;      
     width: 40%;
     margin: 15px;        
     background-color: rgba(228, 140, 32, 0.699);
@@ -641,7 +639,7 @@ main{
     background-color: rgba(228, 140, 32, 0.699);
     height: 100%;
     margin-left: -20px;
-    width: 104.2% !important;
+    width: 104.6% !important;
 }
 
 .fundo-principio h1{ 
