--- a/css/style.css
+++ b/css/style.css
@@ -196,9 +196,7 @@ align-items: stretch;
 }
 .caixa-publico{
 display: inline-block;
-width: 33%;
 margin: 15px;
-max-height: 200px;
 margin-left: 13px;
 background-color: rgba(228, 140, 32, 0.699);
 }
@@ -620,19 +618,34 @@ main{
     margin-bottom: 10px;
 }
 .caixas-publico{
-    display: inline-block;
+   /* display: inline-block;
     gap: 16px;
     margin: 0 auto;
     text-align: center;
     box-sizing: border-box;
-    
+ */  
+ display: flex;
+ flex-wrap: wrap;
+ justify-content: center;
+ gap: 16px;
+ box-sizing: border-box;
+ align-items: stretch;
+ 
 }
 
 .caixa-publico{  
-    display: inline-block;      
+ /*   display: inline-block;      
     width: 40%;
-    margin: 15px;        
+    margin: 15px;*/
+    flex: 1 1 40%;
+    min-width: 140px;
+    max-width: 145px;
+    box-sizing: border-box;
+    padding: 10px;
+    flex-direction: column;
+    justify-content: space-between;
     background-color: rgba(228, 140, 32, 0.699);
+
 }
 .principio{
     background-color: black;
